--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -75,10 +75,10 @@
                   VerticalAlignment="Top" ItemsSource="{Binding GeneralInformations}"
                   Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid.Columns>
-                <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
+                <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="12" />
+                            <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
@@ -215,24 +215,24 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsCrit, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}"
                                                    Kind="Star" Foreground="Brown" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc CritDamage}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsParry, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Kind="SwordCross" Foreground="Black" Style="{StaticResource menuButtonIcon}"
-                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc PeriodicDamage}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsDodge, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:2}"
                                                    Kind="StarCheck" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc Dodge}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsMiss, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:3}"
+                                                   Kind="ShieldSwordOutline" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc Parry}"/>
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:4}"
                                                    Kind="CallMissed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc Miss}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsImmune, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Kind="CarLightDimmed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
-                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc Immune}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsResist, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:5}"
                                                    Kind="Resistor" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc Resist}"/>
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=DamageType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:6}"
+                                                   Kind="CarLightDimmed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   HorizontalAlignment="Center" ToolTip="{loc:Loc Immune}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -243,23 +243,10 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="FromPlayer" IsReadOnly="True" MinWidth="200">
+                    <DataGridTemplateColumn SortMemberPath="Target" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=FromPlayer}" Margin="10" FontSize="12" TextAlignment="Center" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{loc:Loc Player}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.HeaderTemplate>
-                    </DataGridTemplateColumn>
-
-                    <DataGridTemplateColumn SortMemberPath="ToEnemy" IsReadOnly="True" MinWidth="200">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=ToEnemy}" Margin="10" FontSize="12" TextAlignment="Center" />
+                                <TextBlock Text="{Binding Path=Target}" Margin="10" FontSize="12" TextAlignment="Center" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -269,10 +256,10 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="200">
+                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=SpellOrItem}" Margin="10" FontSize="12" />
+                                <TextBlock Text="{Binding Path=Spell}" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -283,6 +270,39 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.Row="3" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal"
+                    Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+            <StackPanel Margin="0 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc First}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding FirstPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Prev}" FontSize="12" Cursor="Hand">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding PrevPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{Binding Page}" FontSize="12" />
+                <TextBlock Margin="5 0" Foreground="White" Text="/" FontSize="12" />
+                <TextBlock Foreground="White" Text="{Binding MaxPages}" FontSize="12" />
+            </StackPanel>
+            <StackPanel Margin="15 0 20 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc Next}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding NextPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Last}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding LastPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0 -15">
