--- a/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
@@ -76,10 +76,10 @@
                   VerticalAlignment="Top" ItemsSource="{Binding GeneralInformations}"
                   Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid.Columns>
-                <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
+                <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="12" />
+                            <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
@@ -212,8 +212,6 @@
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsCrit, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
                                                    Kind="LightningBolt" Foreground="Orange" Style="{StaticResource menuButtonIcon}" ToolTip="{loc:Loc CritHealing}"/>
-                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsFullOverheal, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Kind="PlusBox" Foreground="Red" Style="{StaticResource menuButtonIcon}" ToolTip="{loc:Loc OverHealing}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -224,23 +222,10 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="FromPlayer" IsReadOnly="True" MinWidth="150">
+                    <DataGridTemplateColumn SortMemberPath="Target" IsReadOnly="True" MinWidth="150">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=FromPlayer}" TextAlignment="Center" Margin="10" FontSize="12" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{loc:Loc Player}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.HeaderTemplate>
-                    </DataGridTemplateColumn>
-
-                    <DataGridTemplateColumn SortMemberPath="ToPlayer" IsReadOnly="True" MinWidth="150">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=ToPlayer}" TextAlignment="Center" Margin="10" FontSize="12" />
+                                <TextBlock Text="{Binding Path=Target}" TextAlignment="Center" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -250,10 +235,10 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
+                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="12" />
+                                <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -262,23 +247,43 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
-
-                    <DataGridTemplateColumn SortMemberPath="DamageAbsorbed" IsReadOnly="True" MinWidth="150">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=DamageAbsorbed}" TextAlignment="Center" Margin="10" FontSize="12" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                        <DataGridTemplateColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{loc:Loc DamageAbsorbed}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.HeaderTemplate>
-                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
 
+        <StackPanel Grid.Column="2" Grid.Row="3" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal"
+                    Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+            <StackPanel Margin="0 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc First}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding FirstPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Prev}" FontSize="12" Cursor="Hand">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding PrevPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{Binding Page}" FontSize="12" />
+                <TextBlock Margin="5 0" Foreground="White" Text="/" FontSize="12" />
+                <TextBlock Foreground="White" Text="{Binding MaxPages}" FontSize="12" />
+            </StackPanel>
+            <StackPanel Margin="15 0 20 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc Next}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding NextPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Last}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding LastPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
+        </StackPanel>
+        
         <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="-30 25"
                     Orientation="Horizontal">
             <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"
