--- a/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
@@ -75,10 +75,10 @@
                   VerticalAlignment="Top" ItemsSource="{Binding GeneralInformations}"
                   Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid.Columns>
-                <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
+                <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="175">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=SpellOrItem}" TextAlignment="Center" Margin="10" FontSize="12" />
+                            <TextBlock Text="{Binding Path=Spell}" TextAlignment="Center" Margin="10" FontSize="12" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
@@ -206,10 +206,23 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="200">
+                    <DataGridTemplateColumn SortMemberPath="Creator" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=SpellOrItem}" Margin="10" FontSize="12" />
+                                <TextBlock Text="{Binding Path=Creator}" Margin="10" FontSize="12" TextAlignment="Center" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{loc:Loc Player}" Margin="5" TextAlignment="Center" FontSize="12" Foreground="White"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.HeaderTemplate>
+                    </DataGridTemplateColumn>
+
+                    <DataGridTemplateColumn SortMemberPath="Spell" IsReadOnly="True" MinWidth="200">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Spell}" Margin="10" FontSize="12" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -220,6 +233,39 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.Row="3" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal"
+                    Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+            <StackPanel Margin="0 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc First}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding FirstPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Prev}" FontSize="12" Cursor="Hand">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding PrevPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{Binding Page}" FontSize="12" />
+                <TextBlock Margin="5 0" Foreground="White" Text="/" FontSize="12" />
+                <TextBlock Foreground="White" Text="{Binding MaxPages}" FontSize="12" />
+            </StackPanel>
+            <StackPanel Margin="15 0 20 0" Orientation="Horizontal">
+                <TextBlock Foreground="White" Text="{loc:Loc Next}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding NextPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Margin="15 0" Foreground="White" Text="{loc:Loc Last}" FontSize="12">
+                    <TextBlock.InputBindings>
+                        <MouseBinding Command="{Binding LastPageCommand}" Gesture="LeftClick"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="-30 30"
