--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/detailsSpecificalCombat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/detailsSpecificalCombat.scss
@@ -66,7 +66,7 @@
                     }
                 }
 
-                &__damage-done, &__heal-done, &__damage-taken, &__energy-recovery, &__used-buffs {
+                &__player-statistic-item {
                     padding: 5px;
                     box-shadow: 3px 3px 3px 3px black;
                     border-radius: 15px;
