--- a/src/CombatAnalysis.App/MainWindow.xaml
+++ b/src/CombatAnalysis.App/MainWindow.xaml
@@ -1,13 +1,14 @@
 ﻿<views:MvxWindow
-        xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf" x:Class="CombatAnalysis.App.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="Auto" Width="Auto"
-        ResizeMode="CanResizeWithGrip" Background="Transparent"
-        AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    x:Class="CombatAnalysis.App.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    mc:Ignorable="d"
+    Title="Details Analysis GCL" Height="Auto" Width="Auto"
+    ResizeMode="CanResizeWithGrip" Background="Transparent"
+    AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen">
 
     <Grid />
 </views:MvxWindow>
