--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatMoreDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatMoreDetails.scss
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
 
+    .form-switch {
+        display: flex;
+        gap: 15px;
+        margin: 5px 0;
+    }
+
     svg {
         cursor: pointer;
     }
